<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/menuBar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/toolFlyoutMenu"
            android:id="@+id/main_canvas_view"
            android:orientation="horizontal"
            android:background="@color/drawingAreaBackground"
        />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:layout_toStartOf="@id/toolFlyoutMenu"
            android:layout_alignParentBottom="true"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:id="@+id/undoLayout"
            android:visibility="invisible"
            >
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_undo_24px"
                android:id="@+id/buttonUndo"
                android:onClick="undoStep"
                />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_redo_24px"
                android:id="@+id/buttonRedo"
                android:onClick="redoStep"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:layout_toStartOf="@id/toolFlyoutMenu"
            android:layout_alignParentBottom="true"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:id="@+id/strokeWidthLayout"
            >
            <EditText
                android:id="@+id/strokewidth_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLength="3"
                android:text="10"
                android:layout_gravity="center"/>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="+"
                android:id="@+id/strokewidth_left"
                android:onClick="changeStrokeWidth"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:id="@+id/strokewidth_right"
                android:onClick="changeStrokeWidth"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Size"
                android:padding="15dip"
                android:textAlignment="viewStart"
                />
        </LinearLayout>
        <org.zakariya.flyoutmenu.FlyoutMenuView
            android:id="@+id/toolFlyoutMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="@dimen/flyout_menu_button_padding"
            app:fmButtonSize="@dimen/flyout_menu_button_size"
            app:fmDialogMode="true"
            app:fmItemHeight="@dimen/smiley_menu_item_size"
            app:fmItemMargin="@dimen/smiley_menu_item_margin"
            app:fmItemWidth="@dimen/smiley_menu_item_size"
            app:fmMenuAnchor="bottom"
            app:fmSelectedItemBackgroundColor="@color/smileyMenuSelectionColor"
            app:fmShieldVisible="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</LinearLayout>